Fix optional input alignment

--- a/src/components/QuestionForm/OptionalInput/OptionalInput.module.scss
+++ b/src/components/QuestionForm/OptionalInput/OptionalInput.module.scss
@@ -13,6 +13,8 @@
 	padding: 1rem 0;
 	font-size: 1.5rem;
 	text-align: start;
+	display: grid;
+	align-items: center;
 }
 
 .circle {
